[project]
name = "urbansim2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "developer @ git+https://github.com/stefancoe/developer.git",
    "mock>=5.2.0",
    "patsy",
    "pylogit @ git+https://github.com/stefancoe/pylogit.git@pandas_23_max",
    "pytest>=9.0.2",
    "urbansim @ git+https://github.com/stefancoe/urbansim.git@transition_updates",
    "urbansim_defaults @ git+https://github.com/stefancoe/urbansim_defaults.git",
    "zbox>=1.2.0",
]

